# vivadeo-1

./: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_production_schema.py
sentrysearch/: __init__.py  api.py  base_embedder.py  cli.py  config.py  db.py  downloader.py  embedder.py  modal_app.py  modal_embedder.py  object_store.py  production_store.py  schemas.py  store.py  worker.py
tests/: test_api.py  test_cli.py  test_cli_api_mode.py  test_config.py  test_downloader.py  test_modal_embedder.py  test_store.py
