[project]
name = "sentrysearch"
version = "0.1.0"
description = "Search video footage using Modal-hosted Qwen3-VL embeddings"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "chromadb>=0.4",
    "imageio-ffmpeg>=0.5",
    "modal>=1.0",
    "yt-dlp>=2025.1.0",
]

[project.scripts]
sentrysearch = "sentrysearch.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sentrysearch"]

[dependency-groups]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["sentrysearch"]

[tool.coverage.report]
show_missing = true
