[project]
name = "sentrysearch"
version = "0.1.0"
description = "Search video footage using Modal-hosted Qwen3-VL embeddings"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13",
    "boto3>=1.34",
    "celery[redis]>=5.3",
    "click>=8.1",
    "chromadb>=0.4",
    "fastapi>=0.115",
    "imageio-ffmpeg>=0.5",
    "modal>=1.0",
    "pgvector>=0.3",
    "psycopg[binary]>=3.2",
    "pydantic-settings>=2.4",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.30",
    "yt-dlp>=2025.1.0",
]

[project.scripts]
sentrysearch = "sentrysearch.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sentrysearch"]

[dependency-groups]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["sentrysearch"]

[tool.coverage.report]
show_missing = true
